[package]
name = "winit-app"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29.14" 
thiserror = "1.0.58"
wgpu = { version = "0.19.3", optional = true }
pollster = { version = "0.3.0", optional = true }

[dev-dependencies]
wgpu = "0.19.3"
pollster = "0.3.0"

[features]
default = ["wgpu"]
wgpu = ["dep:wgpu", "dep:pollster"]
